--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-django-webpack</title>
+    <title>js</title>
   </head>
   <body>
-    <div id="app"></div>
+    <app></app>
     <!-- built files will be auto injected -->
   </body>
 </html>
